[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scenes/Projectiles/Projectile.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scripts/Player/Tower.gd" type="Script" id=2]

[sub_resource type="SphereShape" id=2]
radius = 5.79338

[sub_resource type="CylinderMesh" id=3]

[node name="Tower" type="Spatial"]
script = ExtResource( 2 )
projectile = ExtResource( 1 )

[node name="Area" type="Area" parent="."]
input_ray_pickable = false

[node name="CollisionShape" type="CollisionShape" parent="Area"]
shape = SubResource( 2 )

[node name="ReloadTimer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.10086, 0 )
mesh = SubResource( 3 )
material/0 = null
[connection signal="body_entered" from="Area" to="." method="_on_Area_body_entered"]
[connection signal="body_exited" from="Area" to="." method="_on_Area_body_exited"]
[connection signal="timeout" from="ReloadTimer" to="." method="_on_ReloadTimer_timeout"]
